# garyapi

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.sh  go.mod  go.sum
src/: cache.rs  config.rs  docs.html  handlers.rs  lib.rs  main.go  main.rs  responses.rs  routing.rs  server.rs  types.rs
